apps/ai/comfyui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comfyui
  namespace: comfyui
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "ComfyUI"
    hajimari.io/icon: mdi:draw
    hajimari.io/group: "AI"
    hajimari.io/instance: "admin"
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "comfyui.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: comfyui
          port: 18188
